# ergo

./: .Makefile.coq.d  .all-contributorsrc  .gitattributes  .gitignore  .npmignore  .travis.yml  BUILD.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  DEVELOPERS.md  LICENSE  Makefile  Makefile.config  Makefile.coq_modules  README.md  SUMMARY.md  bin  build.md  changelog.md  contributing.md  coq-ergo-lang.opam  developers.md  dune  dune-project  index.html  lerna.json  package-lock.json  package.json  qcert  specification.md  tsconfig.json
.travis/: base.sh  (+2 more)
compiler/: .gitignore  .merlin  dune
compiler/atds/: Monitor.atd  cto.atd
compiler/core/: Makefile  Version.v
compiler/core/Backend/: ForeignErgo.v  ForeignModel.v  QLib.v
compiler/core/Backend/Component/: DateTimeComponent.v  LogComponent.v  LoggerComponent.v  MathComponent.v  MonetaryAmountComponent.v
compiler/core/Backend/Lib/: QBackendModel.v  QBackendRuntime.v  QCodeGen.v  QData.v  QNNRCtoJavaScript.v  QOps.v  QType.v
compiler/core/Backend/Qcert/: QcertCompiler.v  QcertData.v  QcertDataToEJson.v  QcertDataTyping.v  QcertEJson.v  QcertEJsonToJSON.v  QcertModel.v  QcertReduceOps.v  QcertRuntime.v  QcertToJava.v  QcertToJavascriptAst.v  QcertToReduceOps.v  QcertToScala.v  QcertToSpark.v  QcertType.v  QcertTypeToJSON.v  QcertTyping.v
compiler/core/Common/: Ast.v  Names.v  NamespaceContext.v  PrintTypedData.v  Provenance.v  Result.v
compiler/core/Compiler/: ErgoCompiler.v  ErgoDriver.v
compiler/core/Ergo/Lang/: Ergo.v  ErgoMap.v  ErgoSem.v  ErgoSugar.v
compiler/core/ErgoC/Lang/: ErgoC.v  ErgoCEval.v  ErgoCEvalContext.v  ErgoCExpand.v  ErgoCOverloaded.v  ErgoCStdlib.v  ErgoCSugar.v  ErgoCT.v  ErgoCTypecheck.v  ErgoCTypecheckContext.v
compiler/core/ErgoImp/Lang/: ErgoImp.v
compiler/core/ErgoNNRC/Lang/: ErgoNNRC.v  ErgoNNRCSugar.v
compiler/core/ErgoWasm/Lang/: ErgoWasm.v
compiler/core/Tests/: HelloWorld.v
compiler/core/Translation/: CTOtoErgo.v  ErgoAssembly.v  ErgoCInline.v  ErgoCTtoErgoNNRC.v  ErgoCompContext.v  ErgoImptoES6.v  ErgoImptoWasm.v  ErgoImptoWasmAst.v  ErgoNNRCtoCicero.v  ErgoNNRCtoES6.v  ErgoNNRCtoErgoImp.v  ErgoNNRCtoJava.v  ErgoNNRCtoJavaScript.v  ErgoNameResolve.v  ErgotoErgoC.v  WasmAsttoWasmBinary.v
compiler/core/Types/: CTO.v  ErgoCTypeUtil.v  ErgoType.v  ErgoTypetoErgoCType.v  ErgoTypetoQcertType.v  QcertTypeUtil.v
compiler/core/Utils/: Misc.v
compiler/extraction/: .gitignore  Apply.ml  Apply.mli  Ascii.ml  Ascii.mli  Assoc.ml  Assoc.mli  Ast.ml  Ast.mli  Bag.ml  Bag.mli  Basics.ml  Basics.mli  BinInt.ml  BinInt.mli  BinNat.ml  BinNat.mli  BinPos.ml  BinPos.mli  BinPosDef.ml  BinPosDef.mli  BinaryOperators.ml  BinaryOperators.mli  BinaryOperatorsSem.ml  BinaryOperatorsSem.mli  Bindings.ml  Bindings.mli  Bool.ml  Bool.mli  BrandRelation.ml  BrandRelation.mli  CTO.mli  CTOtoErgo.ml  CTOtoErgo.mli  CompCorrectness.ml  CompCorrectness.mli  CompDriver.ml  CompDriver.mli  CompEval.ml  CompEval.mli  (+295 more)
compiler/lib/: CtoImport.ml  CtoImport.mli  ErgoCompile.ml  ErgoConfig.ml  ErgoConfig.mli  ErgoStdlib.ml  ErgoUtil.ml  ErgoUtil.mli  LexUtil.mli  MonetaryAmount.ml  ParseUtil.ml  ParseUtil.mli  compile.ml  config.ml  config.mli  cto_import.ml  cto_import.mli  ergo_util.ml  ergo_util.mli  js_runtime.ml  lex_util.ml  main.ml  parse_util.ml  parse_util.mli  resources.ml  static_config.ml  stdlib.ml  top_util.ml
compiler/libjs/: .merlin  Makefile  compilerJS.ml  dune  ergocJS.ml  ergotopJS.ml
compiler/parsers/: ErgoLexer.mll  ErgoParser.mly  ergo_lexer.mll  ergo_parser.mly
compiler/parsing/: ergo_lexer.mll  ergo_parser.mly
compiler/stdlib/: ciceromark.ml  commonmark.ml  concerto.cto  contract.ml  etime.ergo  etime.ergoi  money.ml  monitor.ml  options.ml  runtime.ml  stdlib.ergo  template.ergo  time.ml
compiler/util/: date_time_component.mli  sexp.ml  uri_component.mli  util.ml
compiler/wasm/: ergo_wasm_translate.ml  ergo_wasm_translate.mli  wasm_ast.ml
(+947 files in other folders)
