opam-version: "2.0"
name: "coq-ergo-lang"
version: "1.0.0~alpha.1"
synopsis: "Ergo Language for Smart Legal Contracts"
description: """
Accord Project's Ergo language for Smart Legal Contracts. Includes Coq development and OCaml libraries.
"""

maintainer: "Jerome Simeon <jeromesimeon@me.com>"
authors: [ "Jerome Simeon <>" ]

license: "Apache-2.0"
homepage: "https://www.accordproject.org"
bug-reports: "https://github.com/accordproject/ergo/issues"
dev-repo: "git+https://github.com/accordproject/ergo"

build: [
  [make "configure"]
  [make "-j" jobs name]
  ["dune" "build" "-j" jobs "-p" name]
]
install: [
  [make "install-coqdev"]
]
remove: ["rm" "-R" "%{lib}%/coq/user-contrib/ErgoLang"]
depends: [
  "ocaml" {>= "4.07.1"}
  "ocamlfind"
  "dune"
  "coq" {>= "8.8.2" & < "8.9~"}
  "coq-flocq" {>= "2.6.1" & < "3.0~"}
  "coq-jsast" {>= "1.0.9"}
  "coq-qcert" {>= "2.0.0~alpha.1"}
  "menhir"
  "base64"
  "uri"
  "calendar"
]

tags: [ "keyword:dsl" "keyword:legal" "keyword:smartcontract" "keyword:blockchain" "date:2020-01-30" "logpath:ErgoSpec" ]
